Harden portable qualification and TestKit delivery